--- a/photo.html
+++ b/photo.html
@@ -8,7 +8,8 @@
     <title>Photo</title>
   </head>
   <body>
-    <img src="croissant.jpg" alt="dog" width="100%" /><br />
+    <h1>Croissants</h1>
+    <img src="/images/croissant.jpg" alt="croissant" width="80%" /><br />
     <a href="/">Homepage</a>
     <a href="/contact.html">Contact Page</a>
   </body>
