--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Learn whether croissants are bread or pastry"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Homepage</title>
+    <title>Are croissants bread or pastry?</title>
   </head>
   <body>
-    <h1>🥐 Croissants</h1>
+    <h1>🥐 Are Croissants Bread or Pastry?</h1>
     <p>
       The dough used to make pastries usually contains a high amount of butter,
       shortening, or oil, resulting in a higher fat content. This distinction is
       what makes croissants not only bread, but pastry as well.
     </p>
-    <a href="/photo.html">Photo Page</a>
-    <a href="/contact.html">Contact Page</a>
+    <a href="/photo.html" title="Croissant Photo">Croissant photos</a>
+    <a href="/contact.html" title="Contact Me">Contact me about croissants</a>
   </body>
 </html>
