--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="contact email to learn more about croissants"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Contact</title>
+    <title>Contact Me about Croissants</title>
   </head>
   <body>
-    <h1>Contact Page</h1>
+    <h1>Contact me to learn more about croissants</h1>
     <h2>croissants@email.com</h2>
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photo Page</a>
+    <a href="/" title="Homepage">Back to homepage</a>
+    <a href="/photo.html" title="Croissant Photo">Croissant photos</a>
   </body>
 </html>
