--- a/photo.html
+++ b/photo.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Photos of buttery croissants" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Photo</title>
+    <title>Photos of Croissants</title>
   </head>
   <body>
-    <h1>Croissants</h1>
-    <img src="/images/croissant.jpg" alt="croissant" width="80%" /><br />
-    <a href="/">Homepage</a>
-    <a href="/contact.html">Contact Page</a>
+    <h1>Photos of Croissants</h1>
+    <img src="/images/croissant.jpg" alt="croissants" width="80%" /><br />
+    <a href="/" title="Homepage">Back to homepage</a>
+    <a href="/contact.html" title="Contact Me">Contact me about croissants</a>
   </body>
 </html>
